# GSSS

./: .gitignore  README.md  app.py  index.html  pyproject.toml  requirements.txt
analyzers/: __init__.py  academic_quant.py  base.py  blackrock_dividend.py  bridgewater_risk.py  chart_pattern.py  citadel_sector.py  config.py  goldman_screener.py  jpmorgan_earnings.py  mckinsey_macro.py  morgan_dcf.py  morgan_technical.py  renaissance_quant.py  scoring.py  stock_data.py  stock_names.py  vanguard_etf.py
docs/: index.html
docs/js/: analyzers.js  app.js  fetcher.js  renderers.js
static/js/: main.js  renderers.js
templates/: base.html  index.html
tests/: conftest.py  test_analyzers.py  test_app.py  test_base.py  test_config.py  test_scoring.py  test_stock_data.py  test_stock_names.py  test_vanguard_citadel.py
