[project]
name = "gsss"
version = "1.0.0"
description = "Goldman Sachs Style Stock Screener — 日本株分析ウェブアプリ"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1,<4",
    "yfinance>=0.2.50,<1",
    "pandas>=2.2,<3",
    "numpy>=2.2,<3",
    "gunicorn>=23,<24",
    "scipy>=1.15,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
